# cookiecutter_aimat

./: HISTORY.rst  README.rst  cookiecutter.json  pyproject.toml
tests/: test_cookiecutter.py  utils.py
{{cookiecutter.project_slug}}/: DEVELOP.rst  README.rst  pyproject.toml
{{cookiecutter.project_slug}}/scripts/: README.rst
{{cookiecutter.project_slug}}/tests/: test_util.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: DEVELOP.rst  testing.py  utils.py
