[build-system]
requires = ["poetry-core>=1.2.0b2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cookiecutter_aimat"
version = "0.1.0"
description = "A cookiecutter template for bachelors / masters thesis projects at AIMAT"
license = "MIT"
authors = ["Jonas Teufel <jonseb1998@gmail.com>"]
maintainers = ["Jonas Teufel <jonseb1998@gmail.com>"]
keywords = []
packages = [
    { include = "{{cookiecutter.project_slug}}" },
]
include = [
    "README.rst",
    "HISTORY.rst",
]

[tool.poetry.dependencies]
python = ">=3.8.0"
pytest = ">=7.1.3"
pytest-cookies = ">=0.6.1"
pytest-venv = ">=0.2.1"
poetry-bumpversion = ">=0.3.0"

[tool.poetry_bumpversion.file."README.rst"]
search = 'version-{current_version}-orange.svg'
replace = 'version-{new_version}-orange.svg'